<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.androidzmqimageclient.MainActivity" >

    <ImageView 
        android:id="@+id/test_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/anvel"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_description"
        />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:shadowColor="#000000"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="0.1"
        android:text="@string/connection"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:alpha="0" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="end"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/IP" />

    <Button
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/bl"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/B" />

    <Button
        android:id="@+id/left"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_above="@+id/bl"
        android:layout_alignParentLeft="true"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/L" />

    <Button
        android:id="@+id/right"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignBaseline="@+id/left"
        android:layout_alignBottom="@+id/left"
        android:layout_toRightOf="@+id/back"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/R" />

    <Button
        android:id="@+id/forward"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_above="@+id/right"
        android:layout_toLeftOf="@+id/right"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/F" />

    <Button
        android:id="@+id/fl"
        android:textSize="8sp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/left"
        android:layout_toLeftOf="@+id/forward"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/FL" />

    <Button
        android:id="@+id/fr"
        android:textSize="8sp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_above="@+id/right"
        android:layout_toRightOf="@+id/forward"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/FR" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/C" />

    <Button
        android:id="@+id/bl"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/left"
        android:layout_alignTop="@+id/back"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/BL" 
        android:textSize="8sp" />

    <Button
        android:id="@+id/br"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/back"
        android:layout_toRightOf="@+id/back"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/BR"
        android:textSize="8sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/br"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/start" />

    <Button
        android:id="@+id/control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:alpha="0"
        android:text="@string/control" />
   
	
</RelativeLayout>
